fixed expense overflow

--- a/src/Pages/Expenses/Expenses.css
+++ b/src/Pages/Expenses/Expenses.css
@@ -11,6 +11,8 @@
     height: 100vh;
     width: 100vw; 
     display: flex;
+    overflow-y: hidden;
+    overflow-x: hidden;
     /* align-items: center; */
 }
 
